@@ -3,7 +3,7 @@
  * HISTORY.C - Nagios History CGI
  *
  * Copyright (c) 1999-2007 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 07-16-2007
+ * Last Modified: 07-17-2007
  *
  * This CGI program will display the history for the specified host.
  * If no host is specified, the history for all hosts will be displayed.
@@ -57,6 +57,8 @@ extern char url_images_path[MAX_FILENAME_LENGTH];
 extern char url_stylesheets_path[MAX_FILENAME_LENGTH];
 
 extern int log_rotation_method;
+
+extern int enable_splunk_integration;
 
 authdata current_authdata;
 
@@ -915,7 +917,13 @@ void get_history(void){
 
 				if(display_frills==TRUE)
 					printf("<img align='left' src='%s%s' alt='%s' title='%s'>",url_images_path,image,image_alt,image_alt);
-				printf("[%s] %s<br clear='all'>\n",date_time,html_encode(temp_buffer,FALSE));
+				printf("[%s] %s",date_time,html_encode(temp_buffer,FALSE));
+				if(enable_splunk_integration==TRUE){
+					printf("&nbsp;&nbsp;&nbsp;");
+					display_splunk_generic_url(temp_buffer,2);
+					}
+				printf("<br clear='all'>\n");
+
 				found_line=TRUE;
 			        }
 		        }
