@@ -246,6 +246,7 @@ The change log for Nagios can be found online at <a href="http://www.nagios.org/
 	<li>Hostgroup and servicegroup summaries now show important/unimportant problem breakdowns liek the TAC CGI.</li>
 	<li>Minor layout changes to host and service detail views in extinfo CGI.</li>
 	<li>New check statistics and have been added to the "Performance Info" screen.</li>
+	<li>Added <a href="http://www.splunk.com/" target="_blank">Splunk</a></li> integration options to various CGIs.  Integration is controlled by the <a href="configcgi.html#enable_splunk_integration">enable_splunk_integration</a> and <a href="configcgi.html#splunk_url">splunk_url</a> options in the CGI config file.
 	</ul>
 </li>
 <br>
